nous contacter updated avec nouveau contenu

--- a/auf_savoirs_en_partage/templates/savoirs/contact.html
+++ b/auf_savoirs_en_partage/templates/savoirs/contact.html
@@ -4,59 +4,56 @@
 <h4>Nous contacter</h4>
 
 <div class="zone-texte">
-    <p style="margin-bottom: 0cm;">Le projet <span style="color: #800000;">S</span><span style="color: #800000;"><em>avoirs en partage</em></span> est conduit par l'AUF. 
-    </p>
-    <p style="margin-bottom: 0cm;">&nbsp;</p>
-    <p style="margin-bottom: 0cm;">Vous pouvez écrire au Webmaster du
-    site : <span style="color: #800000;">savoirsenpartage@auf.org</span></p>
-    <p style="margin-bottom: 0cm;">&nbsp;</p>
-    <p style="margin-bottom: 0cm;">&nbsp;</p>
-    <p style="margin-bottom: 0cm;">Vous trouverez ci-dessous les adresses
-    du rectorat de l'AUF. Les adresses de nos différentes implantations
-    sont  accessibles sur notre site : <a href="http://www.auf.org/">www.auf.org</a></p>
+<p>
+Pour toute information sur les services proposés par ce site,<br />
+vous pouvez nous contacter en écrivant à  : 
+<span style="color: #800000;">contact@savoirsenpartage.auf.org</span>
+</p>
+<p>
+Pour toute information sur l'Agence universitaire de la francophonie,<br />
+vous pouvez visitez notre site : 
+<a href="http://www.auf.org">http://www.auf.org</a>.<br />
+Vous y trouverez également les adresses et contacts de nos différentes implantations. 
+</p>
 
-    <p style="margin-bottom: 0cm;">&nbsp;</p>
-    <p style="margin-bottom: 0cm;"><span style="text-decoration: underline;">AUF- Rectorat et Siège : </span>
-    </p>
-    <p style="margin-bottom: 0cm;">Adresse postale : 
-    </p>
-    <p style="margin-bottom: 0cm;">Case postale du Musée 
-    </p>
-    <p style="margin-bottom: 0cm;">C.P. 49714 
-    </p>
-    <p style="margin-bottom: 0cm;">Montréal, (Québec) H3T 2A5 
-    </p>
-    <p style="margin-bottom: 0cm;">Canada 
-    </p>
-    <p style="margin-bottom: 0cm;">&nbsp;</p>
+<h5>AUF (Montréal)<br />Rectorat et Siège</h5>
+<p>
+<i>Adresse postale :</i><br />
+Case postale du Musée<br />
+C.P. 49714<br />
+Montréal, (Québec) H3T 2A5<br />
+Canada
+</p>
+<p>
+<i>Adresse physique :</i><br />
+3034, Boul. Edouard-Montpetit<br />
+Montréal, (Québec) H3T 1J7<br />
+Canada<br />
+<br />
+Téléphone :	+1 514 343 66 30<br />
+Télécopie :	+1 514 343 21 07<br />
+</p>
 
-    <p style="margin-bottom: 0cm;">Adresse physique : 
-    </p>
-    <p style="margin-bottom: 0cm;">3034, Boul. Edouard-Montpetit 
-    </p>
-    <p style="margin-bottom: 0cm;">Montréal, (Québec) H3T 1J7 
-    </p>
-    <p style="margin-bottom: 0cm;">Canada 
-    </p>
-    <p style="margin-bottom: 0cm;">Téléphone :	+1 514 343 66 30 
-    </p>
-    <p style="margin-bottom: 0cm;">Télécopie :	+1 514 343 57 83 
-    </p>
-    <p style="margin-bottom: 0cm;">&nbsp;</p>
-    <p style="margin-bottom: 0cm;">&nbsp;</p>
-    <p style="margin-bottom: 0cm;"><span style="text-decoration: underline;">AUF- Rectorat et Services centraux</span></p>
+<h5>AUF (Paris)<br />Rectorat et Services centraux</h5>
+<p>
+<i>Adresse postale :</i><br />
+4, place de la Sorbonne<br />
+75005 Paris<br />
+France 
+</p>
+<p>
+ 
+<i>Adresse physique :</i><br />
+4, place de la Sorbonne<br />
+75005 Paris<br />
+France<br />
+<br />
+Téléphone :	+33 1 44 41 18 18<br />
+Télécopie :	+33 1 44 41 18 19<br />
+</p>
+</div>
 
-    <p style="margin-bottom: 0cm;">4, place de la Sorbonne 
-    </p>
-    <p style="margin-bottom: 0cm;">75005 Paris 
-    </p>
-    <p style="margin-bottom: 0cm;">France 
-    </p>
-    <p style="margin-bottom: 0cm;">&nbsp;</p>
-    <p style="margin-bottom: 0cm;">Téléphone :	+33 1 44 41 18 18 
-    </p>
-    <p style="margin-bottom: 0cm;">Télécopie :	+33 1 44 41 18 19 
-    </p>
-    <p style="margin-bottom: 0cm;">&nbsp;</p></div>
+
+
 
 {% endblock %}
