affichage inscription conditionnel a pas connecté

--- a/auf_savoirs_en_partage/templates/savoirs/index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/index.html
@@ -30,7 +30,9 @@
         
         <ul class="sous-menu">
             <li><a href="{% url chercheurs.views.index %}">Répertoire</a></li>
+            {% if not user_chercheur %}
             <li><a href="{% url chercheurs.views.inscription %}">Inscription</a></li>
+            {% endif %}
             <li><a href="{% url chercheurs.views.perso %}">Espace chercheur</a></li>
         </ul>
         
