--- a/auf_savoirs_en_partage/templates/savoirs/login.html
+++ b/auf_savoirs_en_partage/templates/savoirs/login.html
@@ -7,7 +7,7 @@
 {% endif %}
 
   <div class="zone-texte">
-    <form method="post" action="{% url django.contrib.auth.views.login %}">
+    <form method="post" action="{% url chercheurs.views.chercheur_login %}">
       <table>
         <tr>
           <td>{{ form.username.label_tag }}</td>
