Edition des groupes dans fiche chercheur

--- a/auf_savoirs_en_partage/templates/chercheurs/edit.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/edit.html
@@ -12,13 +12,13 @@
             {% include "table_form.html" %}
         {% endwith %}
     </fieldset>
-    
-    <!--<fieldset>
+    lolqut
+    <fieldset>
         <legend>Informations académiques</legend>
         {% with chercheur_form as form %}
             {% include "table_form.html" %}
         {% endwith %}
-    </fieldset>-->
+    </fieldset>
     
     <fieldset>
         <legend>Etablissement de rattachement</legend>
