--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -35,7 +35,19 @@
                     </h1>
                 </div>
                 
-                <div class="clearfix sous-menu gauche">
+                <div class="sous-menu droite">
+                    {% if user.is_authenticated %}
+                    <a href="{% url django.contrib.auth.views.logout %}" class="bout-droit">Déconnexion</a>
+                    {% else %}
+                    <a href="{% url chercheurs.views.chercheur_login %}" class="bout-droit">Connexion</a>
+                    {% endif %}
+                    <span>|</span>
+                    <a href="{% url savoirs.views.nous_contacter %}">Nous contacter</a>
+                    <span>|</span>
+                    <a href="{% url savoirs.views.a_propos %}" class="bout-gauche">À propos de</a>
+                </div>
+                
+                <div class="sous-menu gauche">
                     <a href="{% url savoirs.views.actualite_index %}" class="bout-droit">Actualités</a>
                     <span>|</span>
                     <a href="{% url savoirs.views.evenement_index %}">Agenda</a>
@@ -47,18 +59,6 @@
                     <a href="{% url chercheurs.views.index %}">Chercheurs</a>
                     <span>|</span>
                     <a href="{% url savoirs.views.index %}" class="bout-gauche">Accueil</a>
-                </div>
-                
-                <div class="clearfix sous-menu droite">
-                    {% if user.is_authenticated %}
-                    <a href="{% url django.contrib.auth.views.logout %}" class="bout-droit">Déconnexion</a>
-                    {% else %}
-                    <a href="{% url chercheurs.views.chercheur_login %}" class="bout-droit">Connexion</a>
-                    {% endif %}
-                    <span>|</span>
-                    <a href="{% url savoirs.views.nous_contacter %}">Nous contacter</a>
-                    <span>|</span>
-                    <a href="{% url savoirs.views.a_propos %}" class="bout-gauche">À propos de</a>
                 </div>
 
                 <div id="col-menu">
