debug accueil IE

--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -55,7 +55,7 @@
                     <a href="{% url savoirs.views.index %}" class="bout-gauche">Accueil</a>
                 </div>
                 
-                <div id="logo">
+                <div id="logo" style="clear:both;">
                     <h1>
                         <a href="http://www.auf.org" title="Agence universitaire de la Francophonie">Agence universitaire de la Francophonie</a>
                     </h1>
