--- a/auf_savoirs_en_partage/media/css/ie6.css
+++ b/auf_savoirs_en_partage/media/css/ie6.css
@@ -1,3 +1,6 @@
 body {
 	behavior:url("/js/csshover.htc");
-}
+}#col-menu { margin:30px 0px 0px 0px; }
+/*
+#contenu { width:744px; margin:100px 0px 50px 0px; }
+*/
