debug accueil IE

--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -17,8 +17,8 @@
         <link rel="stylesheet" href="{{ MEDIA_URL }}js/jquery/css/smoothness/jquery-ui-1.8rc3.custom.css" type="text/css" media="all" />
 
         <!--[if lt IE 7]>
-        <link href="/css/ie6.css" rel="stylesheet" type="text/css" media="screen" />
-        <script src="/js/DD_belatedPNG.js"></script>
+        <link href="{{ MEDIA_URL }}css/ie6.css" rel="stylesheet" type="text/css" media="screen" />
+        <script src="{{ MEDIA_URL }}js/DD_belatedPNG.js"></script>
         <script>
             DD_belatedPNG.fix('.top, .bottom, #col-droite, #contenu, .resultats');
         </script>
