conseils de recherche en commentaire (todo)

--- a/auf_savoirs_en_partage/templates/container_base.html
+++ b/auf_savoirs_en_partage/templates/container_base.html
@@ -81,8 +81,10 @@
                         </form>
 
                         <p>
-                        <a href="{% url savoirs.views.avancee %}">Recherche avancée</a> | 
+                        <a href="{% url savoirs.views.avancee %}">Recherche avancée</a>
+                        {% comment %} | 
                         <a href="{% url savoirs.views.conseils %}">Conseils</a>
+                        {% endcomment %}
                         </p>
                     </div>
                 </div>
