--- a/auf_savoirs_en_partage/templates/chercheurs/inscription.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/inscription.html
@@ -18,6 +18,9 @@
         {% with chercheur_form as form %}
             {% include "table_form.html" %}
         {% endwith %}
+        {% with groupe_form as form %}
+            {% include "table_form.html" %}
+        {% endwith %}
     </fieldset>
     
     <fieldset>
