--- a/auf_savoirs_en_partage/templates/render_field.html
+++ b/auf_savoirs_en_partage/templates/render_field.html
@@ -3,12 +3,12 @@
         {{ field }}
     {% else %}
         <td{{ field.row_attrs }} class="required" style="width: 150px;">
-            {{ field.label_tag }}
+            {{ field.label_tag }} {% if field.field.required %}<span style="color:red">*</span>{% endif %}
             {% if field.errors %}
                 {{ field.errors }}
             {% endif %}
         </td>
-        <td>{{ field }} {% if field.field.required %}*{% endif %}
+        <td>{{ field }}
         {% if field.field.help_text %}<p class="help">{{ field.field.help_text|safe }}</p>{% endif %}
         </td>
     {% endif %}
