--- a/auf_savoirs_en_partage/templates/sites/retrieve.html
+++ b/auf_savoirs_en_partage/templates/sites/retrieve.html
@@ -11,7 +11,7 @@
     <table>
         <tr>
             <td><strong>Type:</strong></td>
-            <td>{{site.type}}</td>
+            <td>{{site.type_display}}</td>
         </tr>
         <tr>
             <td><strong>Éditeur:</strong></td>
