--- a/auf_savoirs_en_partage/templates/sites/index.html
+++ b/auf_savoirs_en_partage/templates/sites/index.html
@@ -1,21 +1,5 @@
 {% extends "container_base.html" %}
 
 {% block contenu %}
-<h4>Sitothèque</h4>
-
-<div class="contenu-wrapper">
-<table id="repertoire">
-    <tr>
-        <th>Nom</th>
-        <th></th>
-    </tr>
-{% for s in sites %}
-    <tr class="{% cycle 'odd' 'notodd' %}">
-        <td><a href="{% url sitotheque.views.retrieve s.id %}">{{ s }}</a></td>
-        <td><a href="{{s.url}}"><img src="/media/img/page_white_link.png" /></a></td>
-    </tr>
-{% endfor %}
-</table>
-</div>
-
+{% include "sites/rechercher.html" %}
 {% endblock %}
