Embryon de recherche textuelle dans les actualités.

--- a/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
@@ -7,19 +7,23 @@
 <h4>Actualités</h4>
 
 <div class="contenu-wrapper">
-<div class="centre">{% paginate %}</div>
-<table id="repertoire">
+  <form action="" method="get">
+    <input type="text" name="q" value="{{ request.GET.q }}" size="50" />
+    <input type="submit" value="Rechercher" />
+  </form>
+  <div class="centre">{% paginate %}</div>
+  <table id="repertoire">
     <tr>
-        <th>Nom</th>
-        <th>Source</th>
+    <th>Nom</th>
+    <th>Source</th>
     </tr>
-{% for actualite in actualites %}
+    {% for actualite in actualites %}
     <tr class="{% cycle 'odd' 'notodd' %}">
-        <td><a href="{{ actualite.url }}" class="le-titre">{{ actualite.titre|truncatewords:20 }}</a></td>
-        <td>{{ actualite.source.nom }}</td>
+    <td><a href="{{ actualite.url }}" class="le-titre">{{ actualite.titre|truncatewords:20 }}</a></td>
+    <td>{{ actualite.source.nom }}</td>
     </tr>
-{% endfor %}
-</table>
-<div class="centre">{% paginate %}</div>
+    {% endfor %}
+  </table>
+  <div class="centre">{% paginate %}</div>
 </div>
 {% endblock %}
