--- a/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
@@ -7,9 +7,12 @@
 {% autopaginate ressources %}
 <div class="contenu-wrapper">
   <form action="" method="get">
-    {{ search_form }}
-    <input type="submit" value="Rechercher" />
+    <table>
+      {{ search_form.as_table }}
+      <tr><th></th><td><input type="submit" value="Rechercher" /></td></tr>
+    </table>
   </form>
+  <p><strong>{{ nb_resultats }} ressources correspondant à votre recherche :</strong></p>
   <div class="centre">{% paginate %}</div>
   <table id="repertoire">
     <tr>
