--- a/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
@@ -4,7 +4,7 @@
 
 {% block contenu %}
 <h4>Ressources</h4>
-{% autopaginate ressources %}
+{% autopaginate ressources 15 %}
 <div class="contenu-wrapper">
   <form action="" method="get">
     <table>
@@ -14,18 +14,15 @@
   </form>
   <p><strong>{{ nb_resultats }} ressources correspondant à votre recherche :</strong></p>
   <div class="centre">{% paginate %}</div>
-  <table id="repertoire">
-    <tr>
-    <th>Nom</th>
-    <th>Source</th>
-    </tr>
+  <div class="zone-texte">
     {% for r in ressources %}
-    <tr class="{% cycle 'odd' 'notodd' %}">
-    <td><a href="{% url savoirs.views.ressource_retrieve r.id %}" class="le-titre">{{ r.title|truncatewords:11 }}</a></td>
-    <td>{{ r.server }}</td>
-    </tr>
+    {% include "savoirs/resultat.html" %} 
+    {% empty %}
+    <div class="resultatRecherche">
+      <h2>Aucun résultat trouvé</h2>
+    </div>
     {% endfor %}
-  </table>
+  </div>
   <div class="centre">{% paginate %}</div>
 </div>
 {% endblock %}
