--- a/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
@@ -26,7 +26,7 @@
     <tr>
         <th>{% anchor personne__nom Nom %}</th>
         <th>{% anchor etablissement__nom Établissement %}</th>
-        <th>{% anchor pays__nom Localisation %}</th>
+        <th>{% anchor etablissement__pays Localisation %}</th>
     </tr>
 {% for chercheur in chercheurs %}
     <tr class="{% cycle 'odd' 'notodd' %}">
