--- a/auf_savoirs_en_partage/templates/savoirs/contact.html
+++ b/auf_savoirs_en_partage/templates/savoirs/contact.html
@@ -7,7 +7,7 @@
 <p>
 Pour toute information sur les services proposés par ce site,<br />
 vous pouvez nous contacter en écrivant à  : 
-<span style="color: #800000;">contact-savoirsenpartage@auf.org</span>
+<span style="color: #800000;">{{courriel}}</span>
 </p>
 <p>
 Pour toute information sur l'Agence universitaire de la francophonie,<br />
