--- a/auf_savoirs_en_partage/templates/accounts/login.html
+++ b/auf_savoirs_en_partage/templates/accounts/login.html
@@ -20,7 +20,7 @@
       </table>
 
       <input type="submit" value="Connexion" />
-      <input type="hidden" name="next" value="/" />
+      <input type="hidden" name="next" value="{% if next %}{{next}}{% else %}/chercheurs/perso/{% endif %}" />
     </form>
   </div>
 
