--- a/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/retrieve.html
@@ -1,6 +1,11 @@
 {% extends "container_base.html" %}
 
 {% block contenu %}
+
+{% if inscription %}
+    <span class="contenu-wrapper message">Votre fiche a bien été enregistrée.</span>
+{% endif %}
+    
 <h4>Chercheurs</h4>
 
 <h4>{{ chercheur }}</h4>
@@ -8,13 +13,18 @@
 <div class="contenu-wrapper">
     <div id="fiche_chercheur">
         <p>{{chercheur.personne.courriel}}</p>
+        {% if chercheur.etablissement.nom or chercheur.etablissement_autre_nom %}
         <p>{% firstof chercheur.etablissement.nom chercheur.etablissement_autre_nom "-" %}, {% firstof chercheur.etablissement.pays chercheur.etablissement_autre_pays "-" %}</p>
+        {% endif %}
         
         <table>
+            {% if chercheur.nationalite %}
             <tr>
                 <td class="label">Nationalité:</td>
                 <td>{{chercheur.nationalite.nom|default:"-"}}</td>
             </tr>
+            {% endif %}
+            
             <tr>
                 <td class="label">Fonction:</td>
                 <td>{{chercheur.fonction|default:"-"}}</td>
