--- a/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/ressource_index.html
@@ -1,7 +1,6 @@
 {% extends "container_base.html" %}
 
 {% load pagination_tags %}
-{% load search %}
 
 {% block contenu %}
 <h4>Ressources</h4>
@@ -16,16 +15,8 @@
   <p><strong>{{ nb_resultats }} ressources correspondant à votre recherche :</strong></p>
   <div class="centre">{% paginate %}</div>
   <div class="zone-texte">
-    {% for r in ressources %}
-    <div class="resultatRecherche">
-      <a class="le-titre" href="{{ r.uri }}">{{ r.title|highlight:search_regexp }}</a>
-      {% if r.creator %}
-      <div><span class="lbl">Auteur:</span> {{ r.creator|highlight:search_regexp }}</div>
-      {% endif %}
-      {% if r.description %}
-      <div class="resultatResume"><span class="lbl">Description:</span> {{ r.description|excerpt:search_regexp|highlight:search_regexp }}</div>
-      {% endif %}
-    </div>
+    {% for ressource in ressources %}
+    {% include "savoirs/ressource_resultat.html" %}
     {% empty %}
     <div class="resultatRecherche">
       <h2>Aucun résultat trouvé</h2>
