--- a/auf_savoirs_en_partage/templates/savoirs/recherche.html
+++ b/auf_savoirs_en_partage/templates/savoirs/recherche.html
@@ -22,12 +22,22 @@
 </script>
 
 {% if ressources %}
-<h4>Ressources correspondant à « {{ q }} » ({{ ressources|length }} sur {{ nb_ressources }}):</h4>
+<h4>Ressources correspondant à « {{ q }} » ({{ ressources|length }} sur {{ total_ressources }}):</h4>
 <div class="zone-texte">
   {% for ressource in ressources %}
   {% include "savoirs/ressource_resultat.html" %} 
   {% endfor %}
-  <a href="{% url savoirs.views.ressource_index %}?q={{ q|urlencode }}">Toutes les {{ nb_ressources }} ressources correspondant à « {{ q }} »</a>
+  <p><a href="{% url savoirs.views.ressource_index %}?q={{ q|urlencode }}">Toutes les {{ total_ressources }} ressources correspondant à « {{ q }} »</a></p>
+</div>
+{% endif %}
+
+{% if actualites %}
+<h4>Actualités correspondant à « {{ q }} » ({{ actualites|length }} sur {{ total_actualites }}):</h4>
+<div class="zone-texte">
+  {% for actualite in actualites %}
+  {% include "savoirs/actualite_resultat.html" %} 
+  {% endfor %}
+  <p><a href="{% url savoirs.views.actualite_index %}?q={{ q|urlencode }}">Toutes les {{ total_ressources }} actualités correspondant à « {{ q }} »</a></p>
 </div>
 {% endif %}
 
