Ajout d'un sous-menu dans les briques qui en ont un. (#569)

--- a/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
+++ b/auf_savoirs_en_partage/templates/chercheurs/rechercher.html
@@ -5,6 +5,9 @@
 {% autopaginate chercheurs 20 %}
 
 <h4>Répertoire des chercheurs</h4>
+<ul class="actions">
+  {% include "chercheurs/actions.html" %}
+</ul>
 
 <div class="contenu-wrapper">
 
@@ -38,4 +41,3 @@
 </table>
 <div class="centre">{% paginate %}</div>
 </div>
-
