--- a/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
+++ b/auf_savoirs_en_partage/templates/savoirs/actualite_index.html
@@ -5,6 +5,9 @@
 {% block contenu %}
 {% autopaginate actualites %}
 <h4>Actualités</h4>
+<ul class="actions">
+  <li><a href="/rss/actualites"><img src="/media/img/feed.png" /></a></li>
+</ul>
 
 <div class="contenu-wrapper">
   <form action="" method="get">
