--- a/auf_savoirs_en_partage/templates/savoirs/actualite_resultat.html
+++ b/auf_savoirs_en_partage/templates/savoirs/actualite_resultat.html
@@ -1,7 +1,11 @@
 {% load search %}
 
 <div class="resultatRecherche">
+  <div class="la-date">{{ actualite.date|date:"d F Y" }}</div>
   <a class="le-titre" href="{{ actualite.url }}">{{ actualite.titre|highlight:search_regexp }}</a>
   <div class="resultatResume">{{ actualite.texte|highlight:search_regexp }}</div>
+  {% if actualite.source %}
+  <div><span class="lbl">Source:</span> {{ actualite.source.nom }}</div>
+  {% endif %}
 </div>
 
